Hapus response created_date dan last_modified_date di service urusan dan bidang urusan
