# docs/swagger.yaml
@@ -15,13 +15,9 @@ definitions:
     type: object
   web.BidangUrusanResponse:
     properties:
-      created_date:
-        type: string
       id:
         type: integer
       kode_bidang_urusan:
-        type: string
-      last_modified_date:
         type: string
       nama_bidang_urusan:
         type: string
@@ -1551,13 +1547,9 @@ definitions:
     type: object
   web.UrusanResponse:
     properties:
-      created_date:
-        type: string
       id:
         type: integer
       kode_urusan:
-        type: string
-      last_modified_date:
         type: string
       nama_urusan:
         type: string
@@ -1697,12 +1689,12 @@ info:
     email: support@swagger.io
     name: API Support
     url: http://www.swagger.io/support
-  description: API For Alur Kerja Services
+  description: API For Kertas Kerja Kupang Services
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Alur Kerja Service API
+  title: Kertas Kerja Kupang Service API
   version: "1.0"
 paths:
   /bidang-urusans:
