# helper/model.go
@@ -438,12 +438,10 @@ func ToTargetPokinOpdOperationalNResponses(targets []domain.TargetPokinOpdOperat
 
 func ToUrusanResponse(urusan domain.Urusan) web.UrusanResponse {
 	return web.UrusanResponse{
-		Id:               urusan.Id,
-		KodeUrusan:       urusan.KodeUrusan,
-		NamaUrusan:       urusan.NamaUrusan,
-		Tahun:            urusan.Tahun,
-		CreatedDate:      urusan.CreatedDate.Format("2006-01-02 15:04:05"),
-		LastModifiedDate: urusan.LastModifiedDate.Format("2006-01-02 15:04:05"),
+		Id:         urusan.Id,
+		KodeUrusan: urusan.KodeUrusan,
+		NamaUrusan: urusan.NamaUrusan,
+		Tahun:      urusan.Tahun,
 	}
 }
 
@@ -461,8 +459,6 @@ func ToBidangUrusanResponse(bidangUrusan domain.BidangUrusan) web.BidangUrusanRe
 		KodeBidangUrusan: bidangUrusan.KodeBidangUrusan,
 		NamaBidangUrusan: bidangUrusan.NamaBidangUrusan,
 		Tahun:            bidangUrusan.Tahun,
-		CreatedDate:      bidangUrusan.CreatedDate.Format("2006-01-02 15:04:05"),
-		LastModifiedDate: bidangUrusan.LastModifiedDate.Format("2006-01-02 15:04:05"),
 	}
 }
 
