# model/domain/bidang_urusan.go
@@ -1,12 +1,8 @@
 package domain
 
-import "time"
-
 type BidangUrusan struct {
-	Id                int
-	KodeBidangUrusan  string
-	NamaBidangUrusan  string
-	Tahun             string
-	CreatedDate       time.Time
-	LastModifiedDate  time.Time
+	Id               int
+	KodeBidangUrusan string
+	NamaBidangUrusan string
+	Tahun            string
 }
