# model/domain/urusan.go
@@ -1,12 +1,8 @@
 package domain
 
-import "time"
-
 type Urusan struct {
-	Id               int
-	KodeUrusan       string
-	NamaUrusan       string
-	Tahun            string
-	CreatedDate      time.Time
-	LastModifiedDate time.Time
+	Id         int
+	KodeUrusan string
+	NamaUrusan string
+	Tahun      string
 }
